--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 4px;
             background: white;
-            position: relative;
+            position: relative; /* Dodaj to */
             transition: all 0.2s ease;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         }
@@ -138,8 +138,8 @@
 
         .suggestions-container {
             position: absolute;
-            top: 100%;
-            left: 30px;
+            top: 75%;
+            left: 0;
             right: 0;
             background: white;
             border: 1px solid #ddd;
