--- a/index.html
+++ b/index.html
@@ -2721,7 +2721,7 @@
                                     lineWidth: 5
                                 },
                                 main: {
-                                    strokeColor: '#3300cc',
+                                    strokeColor: 'rgba(0, 0, 139, 0.7)',
                                     lineWidth: 5
                                 }
                             };
