--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
             fixedCostsPerHour: 50,
             variableCostsPerKm: 0.5,
             useLowestFuelPrice: true,
-            useCustomFuelPrices: true,
+            useCustomFuelPrices: fasle,
             globalFuelPrice: 1.35,
             globalAdBluePrice: 0.65,
             customFuelPrices: {
