--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
             customTileLayer,
             {
                 tileSize: 512,
-                pixelRatio: window.devicePixelRatio || 1,
+                pixelRatio: window.devicePixelRatio * 2 || 1,
                 zoom: 5.5,
                 center: { lat: 50.0, lng: 15.0 },
                 renderBaseBackground: true, // Dodajemy tło podczas ładowania
