--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            /* Ustawienie wysokości body na 100% viewportu */
+            min-height: 100vh;
         }
     </style>
 </head>
-<body class="bg-gray-100 antialiased">
+<body class="bg-gray-100 antialiased flex flex-col items-center justify-start">
     <!-- Kontener tła, który zajmuje całą wysokość ekranu -->
-    <div class="relative min-h-screen bg-cover bg-center"
+    <div class="absolute inset-0 bg-cover bg-center -z-10"
          style="background-image: url('https://images.unsplash.com/photo-1616236812482-6bcf025f7074?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-        <!-- Overlay, aby obraz był bardziej widoczny na tle (opcjonalnie) -->
-        <div class="absolute inset-0 bg-black opacity-50"></div>
-
-        <!-- Kontener na środku ekranu, który centruje zawartość -->
-        <div class="relative z-10 flex items-center justify-center min-h-screen p-4">
-            <!-- Link otaczający obraz -->
-            <a href="https://transport-nomad.com/app?" target="_blank" rel="noopener noreferrer"
-               class="block rounded-lg shadow-xl hover:scale-105 transition-transform duration-300 ease-in-out">
-                <!-- Obraz logo -->
-                <img src="logo_black_small_cropped.PNG" alt="Transport Nomad Logo"
-                     class="max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg h-auto rounded-lg">
-            </a>
-        </div>
+        <!-- Brak overlay'a, aby tło było w pełni widoczne -->
     </div>
+
+    <!-- Kontener logo na górze ekranu -->
+    <div class="relative z-10 w-full flex justify-center pt-8 pb-4">
+        <!-- Link otaczający obraz -->
+        <a href="https://transport-nomad.com/app?" target="_blank" rel="noopener noreferrer"
+           class="block rounded-lg shadow-xl hover:scale-105 transition-transform duration-300 ease-in-out">
+            <!-- Obraz logo - zmniejszony rozmiar -->
+            <img src="logo_black_small_cropped.PNG" alt="Transport Nomad Logo"
+                 class="max-w-[120px] sm:max-w-[150px] md:max-w-[180px] h-auto rounded-lg">
+        </a>
+    </div>
+
+    <!-- Możesz dodać tutaj więcej treści, jeśli potrzebujesz,
+         będzie ona wyśrodkowana horyzontalnie pod logo. -->
 </body>
 </html>
