--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
     <script src="js/binPacking.js"></script>
     <script src="js/config.js"></script>
     <!-- Modal ustawień osi -->
-    <div id="axleSettingsModal" class="modal">
+    <div id="axleSettingsModal" class="modal hidden">
         <div class="modal-content">
             <div class="modal-header">
                 <h2>Ustawienia osi i obciążeń</h2>
